# api/handler/order.go
@@ -7,43 +7,43 @@ import (
 	"net/http"
 	"strconv"
 
-	"github.com/gin-gonic/gin"
 	"crud/models"
 
+	"github.com/gin-gonic/gin"
 )
 
-// CreateOrders godoc
-// @ID create_orders
-// @Router /orders [POST]
-// @Summary Create Orders
-// @Description Create Orders
-// @Tags Orders
+// CreateOrder godoc
+// @ID create_order
+// @Router /order [POST]
+// @Summary Create Order
+// @Description Create Order
+// @Tags Order
 // @Accept json
 // @Produce json
-// @Param orders body models.CreateOrders true "CreateOrdersRequestBody"
-// @Success 201 {object} models.Orders "GetOrdersBody"
+// @Param order body models.CreateOrder true "CreateOrderRequestBody"
+// @Success 201 {object} models.Order "GetorderBody"
 // @Response 400 {object} string "Invalid Argument"
 // @Failure 500 {object} string "Server Error"
-func (h *HandlerV1) CreateOrders(c *gin.Context) {
-	var orders models.CreateOrders
+func (h *HandlerV1) CreateOrder(c *gin.Context) {
+	var order models.CreateOrder
 
-	err := c.ShouldBindJSON(&orders)
+	err := c.ShouldBindJSON(&order)
 	if err != nil {
 		log.Printf("error whiling create: %v\n", err)
 		c.JSON(http.StatusBadRequest, err.Error())
 		return
 	}
 
-	id, err := h.storage.Orders().Create(context.Background(), &orders)
+	id, err := h.storage.Order().Create(context.Background(), &order)
 	if err != nil {
 		log.Printf("error whiling Create: %v\n", err)
 		c.JSON(http.StatusInternalServerError, errors.New("error whiling Create").Error())
 		return
 	}
 
-	resp, err := h.storage.Orders().GetByPKey(
+	resp, err := h.storage.Order().GetByPKey(
 		context.Background(),
-		&models.OrdersPrimarKey{Id: id},
+		&models.OrderPrimarKey{Id: id},
 	)
 
 	if err != nil {
@@ -55,25 +55,25 @@ func (h *HandlerV1) CreateOrders(c *gin.Context) {
 	c.JSON(http.StatusCreated, resp)
 }
 
-// GetByIdOrders godoc
-// @ID get_by_id_orders
-// @Router /orders/{id} [GET]
-// @Summary Get By Id Orders
-// @Description Get By Id Orders
-// @Tags Orders
+// GetByIdOrder godoc
+// @ID get_by_id_order
+// @Router /order/{id} [GET]
+// @Summary Get By Id Order
+// @Description Get By Id Order
+// @Tags Order
 // @Accept json
 // @Produce json
 // @Param id path string true "id"
-// @Success 200 {object} models.Orders "GetOrdersBody"
+// @Success 200 {object} models.Order "GetOrderBody"
 // @Response 400 {object} string "Invalid Argument"
 // @Failure 500 {object} string "Server Error"
-func (h *HandlerV1) GetOrdersById(c *gin.Context) {
+func (h *HandlerV1) GetOrderById(c *gin.Context) {
 
 	id := c.Param("id")
 
-	resp, err := h.storage.Orders().GetByPKey(
+	resp, err := h.storage.Order().GetByPKey(
 		context.Background(),
-		&models.OrdersPrimarKey{Id: id},
+		&models.OrderPrimarKey{Id: id},
 	)
 
 	if err != nil {
@@ -85,20 +85,20 @@ func (h *HandlerV1) GetOrdersById(c *gin.Context) {
 	c.JSON(http.StatusOK, resp)
 }
 
-// GetListOrders godoc
-// @ID get_list_orders
-// @Router /orders [GET]
-// @Summary Get List Orders
-// @Description Get List Orders
-// @Tags Orders
+// GetListOrder godoc
+// @ID get_list_order
+// @Router /order [GET]
+// @Summary Get List Order
+// @Description Get List Order
+// @Tags Order
 // @Accept json
 // @Produce json
 // @Param offset query string false "offset"
 // @Param limit query string false "limit"
-// @Success 200 {object} models.Cp "GetOrdersBody"
+// @Success 200 {object} models.GetListOrderResponse "GetOrderBody"
 // @Response 400 {object} string "Invalid Argument"
 // @Failure 500 {object} string "Server Error"
-func (h *HandlerV1) GetOrdersList(c *gin.Context) {
+func (h *HandlerV1) GetOrderList(c *gin.Context) {
 	var (
 		limit  int
 		offset int
@@ -125,9 +125,9 @@ func (h *HandlerV1) GetOrdersList(c *gin.Context) {
 		}
 	}
 
-	resp, err := h.storage.Orders().GetList(
+	resp, err := h.storage.Order().GetList(
 		context.Background(),
-		&models.GetListOrdersRequest{
+		&models.GetListOrderRequest{
 			Limit:  int32(limit),
 			Offset: int32(offset),
 		},
@@ -140,45 +140,48 @@ func (h *HandlerV1) GetOrdersList(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, resp)
+
 }
 
-// UpdateOrders godoc
-// @ID update_orders
-// @Router /orders/{id} [PUT]
-// @Summary Update Orders
-// @Description Update Orders
-// @Tags Orders
+// UpdateOrder godoc
+// @ID update_order
+// @Router /order/{id} [PUT]
+// @Summary Update Order
+// @Description Update Order
+// @Tags Order
 // @Accept json
 // @Produce json
 // @Param id path string true "id"
-// @Param orders body models.CreateOrders true "CreateOrdersRequestBody"
-// @Success 200 {object} models.Orders "GetOrdersBody"
+// @Param order body models.UpdateOrderSwagger true "CreateOrderRequestBody"
+// @Success 200 {object} models.Order "GetordersBody"
 // @Response 400 {object} string "Invalid Argument"
 // @Failure 500 {object} string "Server Error"
-func (h *HandlerV1) UpdateOrders(c *gin.Context) {
+func (h *HandlerV1) UpdateOrder(c *gin.Context) {
 
 	var (
-		orders models.UpdateOrders
+		order models.UpdateOrder
 	)
 
-	orders.Id = c.Param("id")
+	id := c.Param("id")
 
-	if orders.Id == "" {
-		log.Printf("error whiling update: %v\n", errors.New("required orders id").Error())
-		c.JSON(http.StatusBadRequest, errors.New("required orders id").Error())
+	if id == "" {
+		log.Printf("error whiling update: %v\n", errors.New("required order id").Error())
+		c.JSON(http.StatusBadRequest, errors.New("required order id").Error())
 		return
 	}
 
-	err := c.ShouldBindJSON(&orders)
+	err := c.ShouldBindJSON(&order)
 	if err != nil {
 		log.Printf("error whiling update: %v\n", err)
 		c.JSON(http.StatusBadRequest, err.Error())
 		return
 	}
 
-	rowsAffected, err := h.storage.Orders().Update(
+	order.Id = id
+
+	rowsAffected, err := h.storage.Order().Update(
 		context.Background(),
-		&orders,
+		&order,
 	)
 
 	if err != nil {
@@ -193,9 +196,9 @@ func (h *HandlerV1) UpdateOrders(c *gin.Context) {
 		return
 	}
 
-	resp, err := h.storage.Orders().GetByPKey(
+	resp, err := h.storage.Order().GetByPKey(
 		context.Background(),
-		&models.OrdersPrimarKey{Id: orders.Id},
+		&models.OrderPrimarKey{Id: id},
 	)
 
 	if err != nil {
@@ -207,30 +210,30 @@ func (h *HandlerV1) UpdateOrders(c *gin.Context) {
 	c.JSON(http.StatusOK, resp)
 }
 
-// DeleteByOrders godoc
-// @ID delete_by_id_orders
-// @Router /orders/{id} [DELETE]
-// @Summary Delete By Id Orders
-// @Description Delete By Id Orders
-// @Tags Orders
+// DeleteByIdOrder godoc
+// @ID delete_by_id_order
+// @Router /order/{id} [DELETE]
+// @Summary Delete By Id Order
+// @Description Delete By Id Order
+// @Tags Order
 // @Accept json
 // @Produce json
 // @Param id path string true "id"
-// @Success 200 {object} models.Orders "GetOrdersBody"
+// @Success 200 {object} models.Order "GetOrderBody"
 // @Response 400 {object} string "Invalid Argument"
 // @Failure 500 {object} string "Server Error"
-func (h *HandlerV1) DeleteOrders(c *gin.Context) {
+func (h *HandlerV1) DeleteOrder(c *gin.Context) {
 
 	id := c.Param("id")
 	if id == "" {
-		log.Printf("error whiling update: %v\n", errors.New("required orders id").Error())
-		c.JSON(http.StatusBadRequest, errors.New("required orders id").Error())
+		log.Printf("error whiling update: %v\n", errors.New("required order id").Error())
+		c.JSON(http.StatusBadRequest, errors.New("required order id").Error())
 		return
 	}
 
-	err := h.storage.Orders().Delete(
+	err := h.storage.Order().Delete(
 		context.Background(),
-		&models.OrdersPrimarKey{
+		&models.OrderPrimarKey{
 			Id: id,
 		},
 	)
