# models/order.go
@@ -1,0 +1,64 @@
+package models
+
+type OrderPrimarKey struct {
+	Id string `json:"id"`
+}
+
+type CreateOrder struct {
+	Description string `json:"description"`
+	ProductId   string `json:"product_id"`
+}
+
+type Order struct {
+	Id          string `json:"id"`
+	Description string `json:"description"`
+	ProductId   string `json:"product_id"`
+	CreatedAt   string `json:"created_at"`
+	UpdatedAt   string `json:"updated_at"`
+	DeletedAt   string `json:"deleted_at"`
+}
+
+type UpdateOrderSwagger struct {
+	Description string `json:"description"`
+	ProductId   string `json:"product_id"`
+}
+
+type UpdateOrder struct {
+	Id          string `json:"id"`
+	Description string `json:"description"`
+	ProductId   string `json:"product_id"`
+}
+
+type GetListOrderRequest struct {
+	Limit      int32
+	Offset     int32
+	CategoryId string
+}
+
+type GetListOrderResponse struct {
+	Count  int          `json:"count"`
+	Orders []*OrderList `json:"orders"`
+}
+
+type OrderList struct {
+	Id          string       `json:"id"`
+	Description string       `json:"description"`
+	Product     *ProductList `json:"product"`
+	CreatedAt   string       `json:"created_at"`
+	UpdatedAt   string       `json:"updated_at"`
+}
+type ProductList struct {
+	Id        string      `json:"id"`
+	Name      string      `json:"name"`
+	Category  *Categories `json:"category"`
+	CreatedAt string      `json:"created_at"`
+	UpdatedAt string      `json:"updated_at"`
+}
+type Categories struct {
+	Id        string       `json:"id"`
+	Name      string       `json:"name"`
+	ParentID  string       `json:"parent_id"`
+	CreatedAt string       `json:"created_at"`
+	UpdatedAt string       `json:"updated_at"`
+	Order     []*OrderList `json:"order_list"`
+}
